2002-06-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/grob.cc (programming_error): add programming_error with
	origin location.  

	* lily/tuplet-bracket.cc (parallel_beam): robustness check, don't
	fail if a beam doesn't have stems.  

	* lily/engraver-group-engraver.cc (do_announces): scary change in
	calling convention of create_grobs():  no create_grobs() call
	before acknowledge_grobs().

	* lily/sequential-music-iterator.cc (skip): add support for grace
	notes. 

	* lily/music.cc (Music): fix very subtle and nasty memory
	corruption bug. Typical symptom: "programming_error: Rhythmic_req
	has no duration"

	* mutopia/claop.py: new file: CLA(O)P II by Peter Wallin.

2002-06-19  Han-Wen  <hanwen@cs.uu.nl>

	* lily/parser.yy: various protection fixes. Less objects are now
	overprotected.

2002-06-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/bin/release.py (prev_ver): Bugfix: assume new diff
	naming scheme.

	* Documentation/windows/zlily-profile.sh:
	* Documentation/windows/post-lilypond.sh: Assume normal
	prefix=/usr for lilypond.

	* lily/musical-request.cc (length_mom): Display origin with error.

	* input/test/duration-check.ly: New file.

	* lily/lily-guile.cc (ly_pair_p): [PARANOID]: Check for freed
	cells.

	* lily/part-combine-music-iterator.cc (get_state): Bugfix: use
	ly_symbol2scm to get a scm symbol (rather than ly_str02scm).

	* aclocal.m4:
	* autogen.sh: Regenerate.
	
	* Documentation/topdocs/INSTALL.texi: 
	* configure.in: 
	* stepmake/configure.in:
	* stepmake/aclocal.m4: Revert autoconf upgrade.  Autoconf 2.53 has
	a serious bug wrt AC_CONFIG_AUX_DIR (reported).  Creating
	./configure once again requires autoconf == 2.13.

	* stepmake/autogen.sh: Check for autoconf == 2.13.

2002-06-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (open_request_parens): add input locations to
	open and close parens. 

2002-06-17  Chris Jackson <chris@fluffhouse.org.uk>

	* lily/tuplet-bracket.cc:
	* lily/text-spanner.cc: 