@@ -59,7 +59,7 @@ class Rhythmic_column_engraver :public Engraver
 protected:
 
   virtual void acknowledge_grob (Grob_info);
-  virtual void create_grobs ();
+  virtual void process_acknowledged_grobs ();
   virtual void stop_translation_timestep ();
   virtual void start_translation_timestep ();
 };
@@ -78,7 +78,7 @@ Rhythmic_column_engraver::Rhythmic_column_engraver ()
 
 
 void
-Rhythmic_column_engraver::create_grobs ()
+Rhythmic_column_engraver::process_acknowledged_grobs ()
 {
   if (rhead_l_arr_.size ())
     {
