@@ -29,7 +29,7 @@ protected:
   virtual bool try_music (Music *);
   virtual void stop_translation_timestep ();
   virtual void start_translation_timestep ();
-  virtual void create_grobs ();
+  virtual void process_acknowledged_grobs ();
 
 private:
   Spanner *span_;
@@ -82,7 +82,7 @@ Text_spanner_engraver::try_music (Music *m)
 }
 
 void
-Text_spanner_engraver::create_grobs ()
+Text_spanner_engraver::process_acknowledged_grobs ()
 {
   if (req_drul_[STOP])
     {
